--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
   "name": "houseofbecome",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "House of Become - Jewelry for Women in Transition",
+  "main": "index.html",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "serve .",
+    "build": "echo 'No build required for static site'"
   },
-  "dependencies": {
-    "framer-motion": "^11.0.0",
-    "next": "^14.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
-  }
+  "keywords": [
+    "jewelry",
+    "luxury",
+    "fine-jewelry",
+    "women",
+    "becoming"
+  ],
+  "author": "House of Become",
+  "license": "MIT"
 }
